parser/tests/snapshots/errors__struct_bad_field_name.snap
---
source: parser/tests/errors.rs
expression: err

---
error: failed to parse field definition
  ┌─ struct_bad_field_name:2:6
  │
2 │  pub def
  │      ^^^ Unexpected token. Expected a name


